<resources>
    <string name="app_name">Picture of the Day</string>

    <!-- Main Fragment -->
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Search on Wiki</string>
    <string name="wiki_helper_text">Search for the term on Wikipedia</string>
    <string name="error_empty_link">Link is empty</string>
    <string name="chip_today">Today</string>
    <string name="chip_yesterday">Yesterday</string>
    <string name="chip_before_yesterday">Before yesterday</string>
    <string name="fab_description">Switch bottom app bar</string>

    <!-- Menu Bottom Bar -->
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="notes">Notes</string>

    <!-- Menu Bottom Navigation -->
    <string name="to_main_screen">To main screen</string>
    <string name="to_screen_two">To animation screen</string>

    <!-- Settings Fragment -->
    <string name="select_theme">Select theme</string>
    <string name="purple_theme">Purple</string>
    <string name="pink_theme">Pink</string>
    <string name="indigo_theme">Indigo</string>
    <string name="select_day_night">Select day/night mode</string>
    <string name="auto_mode">Auto</string>
    <string name="day_mode">Day</string>
    <string name="night_mode">Night</string>

    <!-- View Pager -->
    <string name="tab_text_earth">Earth</string>
    <string name="tab_text_mars">Mars</string>
    <string name="tab_text_weather">Weather</string>
    <string name="image_stub">Image</string>

    <!--  Animation Activity  -->
    <string name="animation_activity_shared_transition" translatable="false">Shared Element Transition</string>

    <!--  Notes Fragment  -->
    <string name="notes_select_priority">Select priority:</string>
    <string name="notes_priority_low">Low</string>
    <string name="notes_priority_normal">Normal</string>
    <string name="notes_priority_high">High</string>

</resources>
