<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/settings_fragment_content_padding">

        <TextView
            android:id="@+id/textViewSettingsSelectTheme"
            style="@style/Settings.TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_theme" />

        <androidx.cardview.widget.CardView
            style="@style/Settings.CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupAppTheme"
                style="@style/Settings.ChipGroupStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@+id/chipSettingsThemePurple">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSettingsThemePurple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purple_theme" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSettingsThemePink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pink_theme" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSettingsThemeIndigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/indigo_theme" />
            </com.google.android.material.chip.ChipGroup>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textViewSettingsSelectDayNight"
            style="@style/Settings.TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_day_night" />

        <androidx.cardview.widget.CardView
            style="@style/Settings.CardStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroupAppMode"
                style="@style/Settings.ChipGroupStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@+id/chipSettingsModeAuto">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSettingsModeAuto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/auto_mode" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSettingsModeDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_mode" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSettingsModeNight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night_mode" />
            </com.google.android.material.chip.ChipGroup>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>
